--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+textarea {
+  resize: none;
+  border: none;
+  margin-top: 5px;
+  padding: 10px;
+  overflow: hidden;
+  outline: none;
+}
